it has a segmentation fault bug

--- a/source/Base/CMakeLists.txt
+++ b/source/Base/CMakeLists.txt
@@ -6,11 +6,11 @@
 add_library(BaseController SHARED BaseController.h
                                       BaseController.cpp)
 
-add_library(Food           SHARED Food.h
-                                      Food.cpp)
+add_library(Region           SHARED Region.h
+                                      Region.cpp)
 
-add_library(Pheromone           SHARED Pheromone.h
-                                      Pheromone.cpp)
+#add_library(Pheromone           SHARED Pheromone.h
+#                                      Pheromone.cpp)
 
 ###############################################
 # link shared object files to dependencies
@@ -21,8 +21,8 @@ target_link_libraries(BaseController
                       argos3plugin_simulator_footbot
                       argos3plugin_simulator_genericrobot)
 
-target_link_libraries(Food)
-target_link_libraries(Pheromone)
+target_link_libraries(Region)
+#target_link_libraries(Pheromone)
 
 ###############################################
 # some notes...
