Fixed the QMainWindow issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,13 +41,22 @@ endif()
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
 
 # Find the ARGoS package.
-find_package(ARGoS REQUIRED)
-include_directories(${CMAKE_SOURCE_DIR} ${ARGOS_INCLUDE_DIRS})
-link_directories(${ARGOS_LIBRARY_DIR})
-link_libraries(${ARGOS_LDFLAGS})
+#find_package(ARGoS REQUIRED)
+#include_directories(${CMAKE_SOURCE_DIR} ${ARGOS_INCLUDE_DIRS})
+#link_directories(${ARGOS_LIBRARY_DIR})
+#link_libraries(${ARGOS_LDFLAGS})
+
+
+#the following block about ARGoS package is from ARGOS examples
+# Find the ARGoS package, make sure to save the ARGoS prefix
+find_package(PkgConfig)
+pkg_check_modules(ARGOS REQUIRED argos3_simulator)
+set(ARGOS_PREFIX ${ARGOS_PREFIX} CACHE INTERNAL "")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${ARGOS_PREFIX}/share/argos3/cmake)
 
 # Check for required libraries to compile code depending on Qt and OpenGL.
-# include(ARGoSCheckQTOpenGL)
+# This fix the qt opengl mainwindow QMainWindow: No such file or directory problem 02/2023 qilu
+ include(ARGoSCheckQTOpenGL)
 
 
 # Find the GSL package.
